--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,19 +17,22 @@
   </section>
   <section id="contact">
     <div class="pure-g">
-      <div class="pure-u-1-5">
+      <div class="pure-u-1-3">
         <a href="https://github.com/rafaelcalleja/"><i class="fa fa-github-alt"></i></a>
       </div>
-      <div class="pure-u-1-5">
+      <div class="pure-u-1-3">
         <a href="https://github.com/PHP-DNOISE/"><i class="fa fa-github-alt"></i></a>
       </div>
-      <div class="pure-u-1-5">
+      <div class="pure-u-1-3">
         <a href="https://github.com/dnoise/"><i class="fa fa-github-alt"></i></a>
       </div>
-      <div class="pure-u-1-5">
+      <div class="pure-u-1-3">
+        <a href="https://www.linkedin.com/in/rafaelcallejajimenez/"><i class="fa fa-linkedin-square"></i></a>
+      </div>
+      <div class="pure-u-1-3">
         <a href="http://twitter.com/rcalleja_dnoise/"><i class="fa fa-twitter"></i></a>
       </div>
-      <div class="pure-u-1-5">
+      <div class="pure-u-1-3">
         <a href="mailto:rafaelcalleja@gmail.com"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
