--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
         <a href="https://www.linkedin.com/in/rafaelcallejajimenez/"><i class="fa fa-linkedin-square"></i></a>
       </div>
       <div class="pure-u-1-3">
-        <a href="http://twitter.com/rcalleja_dnoise/"><i class="fa fa-twitter"></i></a>
+        <a href="http://twitter.com/rcalleja_dev/"><i class="fa fa-twitter"></i></a>
       </div>
       <div class="pure-u-1-3">
         <a href="mailto:rafaelcalleja@gmail.com"><i class="fa fa-envelope"></i></a>
